// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoryBase.ts should create entity 1`] = `
MockEntity {
  "_created": 2020-01-01T07:00:00.000Z,
  "_events": Array [],
  "_id": "e397bc49-849e-4df6-a536-7b9fa3574ace",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
  "hasCreatedFunctionBeenCalled": true,
  "name": "e1",
}
`;

exports[`RepositoryBase.ts should create entity 2`] = `
Object {
  "databaseName": Object {
    "MockRepository": Object {
      "data": Array [
        Object {
          "created": 2020-01-01T07:00:00.000Z,
          "id": "e397bc49-849e-4df6-a536-7b9fa3574ace",
          "name": "e1",
          "updated": 2020-01-01T07:00:00.000Z,
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
  "initialized": true,
}
`;

exports[`RepositoryBase.ts should create entity when not found 1`] = `
MockEntity {
  "_created": 2020-01-01T07:00:00.000Z,
  "_events": Array [],
  "_id": "86ca6243-4813-42f5-9829-582b6303c10a",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
  "hasCreatedFunctionBeenCalled": true,
  "name": "new-entity",
}
`;

exports[`RepositoryBase.ts should create entity when not found 2`] = `
Object {
  "databaseName": Object {
    "MockRepository": Object {
      "data": Array [
        Object {
          "created": 2020-01-01T07:00:00.000Z,
          "id": "86ca6243-4813-42f5-9829-582b6303c10a",
          "name": "new-entity",
          "updated": 2020-01-01T07:00:00.000Z,
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
  "initialized": true,
}
`;

exports[`RepositoryBase.ts should find an entity and not create 1`] = `
MockEntity {
  "_created": 2020-01-01T07:00:00.000Z,
  "_events": Array [],
  "_id": "e397bc49-849e-4df6-a536-7b9fa3574ace",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
  "hasCreatedFunctionBeenCalled": undefined,
  "name": "found-and-exists",
}
`;

exports[`RepositoryBase.ts should find an entity and not create 2`] = `
Object {
  "databaseName": Object {
    "MockRepository": Object {
      "data": Array [
        Object {
          "created": 2020-01-01T07:00:00.000Z,
          "id": "e397bc49-849e-4df6-a536-7b9fa3574ace",
          "name": "found-and-exists",
          "updated": 2020-01-01T07:00:00.000Z,
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
  "initialized": true,
}
`;

exports[`RepositoryBase.ts should find entity 1`] = `
MockEntity {
  "_created": 2020-01-01T07:00:00.000Z,
  "_events": Array [],
  "_id": "e397bc49-849e-4df6-a536-7b9fa3574ace",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
  "hasCreatedFunctionBeenCalled": undefined,
  "name": "e1",
}
`;

exports[`RepositoryBase.ts should find entity 2`] = `
Object {
  "databaseName": Object {
    "MockRepository": Object {
      "data": Array [
        Object {
          "created": 2020-01-01T07:00:00.000Z,
          "id": "e397bc49-849e-4df6-a536-7b9fa3574ace",
          "name": "e1",
          "updated": 2020-01-01T07:00:00.000Z,
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
  "initialized": true,
}
`;

exports[`RepositoryBase.ts should find many entities 1`] = `
Array [
  MockEntity {
    "_created": 2020-01-01T07:00:00.000Z,
    "_events": Array [],
    "_id": "e397bc49-849e-4df6-a536-7b9fa3574ace",
    "_updated": 2020-01-01T07:00:00.000Z,
    "_version": 0,
    "hasCreatedFunctionBeenCalled": undefined,
    "name": "ex",
  },
  MockEntity {
    "_created": 2020-01-01T07:00:00.000Z,
    "_events": Array [],
    "_id": "e397bc49-849e-4df6-a536-7b9fa3574ace",
    "_updated": 2020-01-01T07:00:00.000Z,
    "_version": 0,
    "hasCreatedFunctionBeenCalled": undefined,
    "name": "ex",
  },
]
`;

exports[`RepositoryBase.ts should find many entities 2`] = `
Object {
  "databaseName": Object {
    "MockRepository": Object {
      "data": Array [
        Object {
          "created": 2020-01-01T07:00:00.000Z,
          "id": "e397bc49-849e-4df6-a536-7b9fa3574ace",
          "name": "ex",
          "updated": 2020-01-01T07:00:00.000Z,
          "version": 0,
        },
        Object {
          "created": 2020-01-01T07:00:00.000Z,
          "id": "e397bc49-849e-4df6-a536-7b9fa3574ace",
          "name": "ex",
          "updated": 2020-01-01T07:00:00.000Z,
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
  "initialized": true,
}
`;

exports[`RepositoryBase.ts should remove many entities 1`] = `
Array [
  MockEntity {
    "_created": 2020-01-01T07:00:00.000Z,
    "_events": Array [],
    "_id": "e397bc49-849e-4df6-a536-7b9fa3574ace",
    "_updated": 2020-01-01T07:00:00.000Z,
    "_version": 0,
    "hasCreatedFunctionBeenCalled": undefined,
    "name": "e3",
  },
]
`;

exports[`RepositoryBase.ts should remove many entities 2`] = `
Object {
  "databaseName": Object {
    "MockRepository": Object {
      "data": Array [
        Object {
          "created": 2020-01-01T07:00:00.000Z,
          "id": "e397bc49-849e-4df6-a536-7b9fa3574ace",
          "name": "e3",
          "updated": 2020-01-01T07:00:00.000Z,
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
  "initialized": true,
}
`;

exports[`RepositoryBase.ts should remove one entity 1`] = `Array []`;

exports[`RepositoryBase.ts should remove one entity 2`] = `
Object {
  "databaseName": Object {
    "MockRepository": Object {
      "data": Array [],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
  "initialized": true,
}
`;

exports[`RepositoryBase.ts should run setup on any method 1`] = `
Object {
  "databaseName": Object {
    "MockRepository": Object {
      "data": Array [
        Object {
          "created": 2020-01-01T07:00:00.000Z,
          "id": "e397bc49-849e-4df6-a536-7b9fa3574ace",
          "name": "mock",
          "updated": 2020-01-01T07:00:00.000Z,
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
  "initialized": true,
}
`;

exports[`RepositoryBase.ts should update entity 1`] = `
MockEntity {
  "_created": 2020-01-01T07:00:00.000Z,
  "_events": Array [],
  "_id": "e397bc49-849e-4df6-a536-7b9fa3574ace",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 1,
  "hasCreatedFunctionBeenCalled": true,
  "name": "changed",
}
`;

exports[`RepositoryBase.ts should update entity 2`] = `
Object {
  "databaseName": Object {
    "MockRepository": Object {
      "data": Array [
        Object {
          "created": 2020-01-01T07:00:00.000Z,
          "id": "e397bc49-849e-4df6-a536-7b9fa3574ace",
          "name": "changed",
          "updated": 2020-01-01T07:00:00.000Z,
          "version": 1,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
  "initialized": true,
}
`;
